fixed GapHeader

--- a/src/containers/GAPInsurance/styles.scss
+++ b/src/containers/GAPInsurance/styles.scss
@@ -582,7 +582,16 @@
     background-position: center;
     padding-right: 20px;
     padding-left: 20px;
+    padding-top: 80px;
     padding-bottom: 0;
+    .hide {
+      display: none;
+    }
+    .container {
+      a {
+        margin-right: 0;
+      }
+    }
     .picture {
       margin-left: -15px;
       margin-right: -15px;
@@ -602,6 +611,9 @@
       .link {
         margin: 15px 0 25px;
       }
+      a {
+        margin-right: 20px;
+      }
     }
   }
 
@@ -612,6 +624,9 @@
     & > .title {
       font-size: 28px;
       line-height: 1.3;
+      padding: 0;
+      margin-top: 0;
+      margin-bottom: 30px;
     }
 
     .container {
